--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - external
+      - internal
 
   web:
     build:
